src/test/deca/syntax/valid/decl_param/test_decl_param.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
// mismatched input 'int' expecting {',', ')'}
// Historique:
//    cree le 01/01/2024

class A {   
    void f(int a, int b) {
        print("a = " + a + " b = " + b);
    }
}
