src/test/deca/syntax/invalid/method_body/test_method_body_cast_without_parent.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
//   no viable alternative at input '}'
// Historique:
//    cree le 01/01/2024

class A {   
    void k(int a) {
        this.f(a);
    }
    void f(int a) {
        print(a);
    }
}

class B extends A {
    void f(int a) {
        print(a);
    }
}

{
    A a;
    B b;
    a = new A();
    b = new B();
    b = (B) a;
}